# sql-agent-demo

./: .env.example  .gitignore  README.md  agent.py  evaluate_agent.py  models.py  pyproject.toml  seeder.py
